--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "node-sass": "^3.8.0",
+    "postcss-loader": "^0.9.1",
+    "sass-loader": "^4.0.0",
+    "webpack-svgstore-plugin": "^3.0.0"
+  },
   "scripts": {
     "api": "node api.js",
     "build": "webpack",
